# handInterp

./: CMakeLists.txt  package.xml
include/: commander.hpp  gestureManager.hpp  handEndpoint.hpp  handInterp.hpp  poseContainer.hpp  quadContainer.hpp  viconInterp.hpp
include/gestures/: pointerFollower.hpp
launch/: handI.launch  viconHand.launch  viconHandsubject.launch  viconI.launch  viconIsubject.launch
msg/: gesture.msg  handMsg.msg  hands.msg  oneHand.msg
src/: commander.cpp  commanderActions.cpp  gestureManager.cpp  gestureNN.py  handEndpoint.cpp  handEndpointPipeWin.cpp  handInterp.cpp  handMain.cpp  interpMain.cpp  main.cpp  poseContainer.cpp  quadContainer.cpp  viconInterp.cpp  vrFrEndpoint.cpp
src/gestures/: pointerFollower.cpp
